--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ly_header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
     android:padding="10dp"
     android:orientation="horizontal">
+    <Button
+        android:id="@+id/boton"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:text="entrar"/>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
