--- a/app/src/main/res/layout/fragment_capa2.xml
+++ b/app/src/main/res/layout/fragment_capa2.xml
@@ -3,12 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.Capa2">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/txt_dato"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Capa 2" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="15dp"
+        android:tint="#ffffff"
+        app:srcCompat="@drawable/ic_cloud_download"/>
 
 </FrameLayout>
