--- a/app/src/main/res/layout/layout_formdialog.xml
+++ b/app/src/main/res/layout/layout_formdialog.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:orientation="vertical">
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/id_edtUbigeo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="place"/>
+        </com.google.android.material.textfield.TextInputLayout>
         <LinearLayout
             android:id="@+id/dialog_lyt"
             android:orientation="vertical"
@@ -13,18 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ubigeo   :"/>
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/id_edtUbigeo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
