--- a/app/src/main/res/layout/layout_form_capa.xml
+++ b/app/src/main/res/layout/layout_form_capa.xml
@@ -13,6 +13,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                                <androidx.appcompat.widget.AppCompatEditText
+                                    android:id="@+id/id_edtId"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="Id"
+                                    android:textColor="@color/colorBlack"/>
+                        </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
