--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/capa1" android:title="Capa 1" android:icon="@drawable/ic_action_pin"/>
-    <item android:id="@+id/capa2" android:title="Capa 2" android:icon="@drawable/ic_action_pin"/>
-    <item android:id="@+id/capa3" android:title="Capa 3" android:icon="@drawable/ic_action_pin"/>
-    <item android:id="@+id/capa4" android:title="Capa 4" android:icon="@drawable/ic_action_pin"/>
-    <item android:id="@+id/capa5" android:title="Capa 5" android:icon="@drawable/ic_action_pin"/>
-    <item android:id="@+id/capa6" android:title="Capa 6" android:icon="@drawable/ic_action_pin"/>
+    <item android:id="@+id/capa1" android:title="Manzana" android:icon="@drawable/ic_view_module_26"/>
+    <item android:id="@+id/capa2" android:title="Vivienda" android:icon="@drawable/ic_home_24"/>
+    <item android:id="@+id/capa3" android:title="Eje Vial" android:icon="@drawable/ic_transfer_within_a_station_24"/>
+    <item android:id="@+id/capa4" android:title="Agregar Capa" android:icon="@drawable/ic_layers_36"/>
 
 </menu>
