--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ly_header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,31 +11,25 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <ImageView
-            android:id="@+id/img_add_capa"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:clickable="true"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/ic_layers_36"/>
-        <ImageView
-            android:id="@+id/img_delete_capa"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:clickable="true"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/ic_layers_clear"/>
-        <ImageView
-            android:id="@+id/img_list_capa"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:clickable="true"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_format_list_bulleted"/>
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:paddingTop="8dp"
+            app:srcCompat="@drawable/logo_inei_blanco"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:text="ACTUALIZACION CARTOGRAFICA"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Manzana y Vivienda"/>
 
     </LinearLayout>
 
