--- a/app/src/main/res/layout/fragment_list_poligono.xml
+++ b/app/src/main/res/layout/fragment_list_poligono.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
         <include layout="@layout/item_header_poligono"/>
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_lista_lopigono"
+            android:id="@+id/rv_lista_poligono"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
