--- a/app/src/main/res/layout/layout_mapa_principal.xml
+++ b/app/src/main/res/layout/layout_mapa_principal.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.Capa3"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,8 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/map" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab1"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
@@ -24,8 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="90dp"
+        android:layout_margin="15dp"
         android:tint="#ffffff"
         app:srcCompat="@drawable/ic_action_save"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -33,9 +36,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="160dp"
+        android:layout_margin="15dp"
         android:tint="#ffffff"
         app:srcCompat="@drawable/ic_action_add"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab4"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|start"
+        android:layout_margin="15dp"
+        android:tint="#ffffff"
+        app:srcCompat="@drawable/ic_undo"/>
+    </LinearLayout>
 
 </FrameLayout>
