--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -24,12 +24,14 @@
             android:layout_height="wrap_content"
             android:paddingTop="8dp"
             android:text="ACTUALIZACION CARTOGRAFICA"
+            android:textColor="@color/colorWhite"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Manzana y Vivienda"/>
+            android:text="Manzana y Vivienda"
+            android:textColor="@color/colorGris"/>
 
     </LinearLayout>
 
