--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/capa1"
           android:title="Manzana"
+          android:iconTint="@color/colorAccent"
           android:icon="@drawable/ic_view_module_26"/>
     <item android:id="@+id/capa2"
           android:title="Vivienda"
@@ -13,10 +14,6 @@
           android:title="Reporte Manzana"
           android:icon="@drawable/ic_format_list_bulleted"/>
     <item android:id="@+id/capa5"
-          android:visible="false"
-          android:title="Importar"
-          android:icon="@drawable/ic_get_app"/>
-    <item android:id="@+id/capa6"
           android:title="Reset BD"
           android:icon="@drawable/ic_action_turn_right"/>
 </menu>
