--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="colorGris">#FCFCFC</color>
     <color name="colorVerde">#088A29</color>
     <color name="colorHumo">#A4A4A4</color>
+    <color name="colorRojo">#DF3A01</color>
 
 </resources>
