--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -30,10 +30,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Manzana y Vivienda"
+            android:text="Manzana Urbana"
             android:textColor="@color/colorGris"/>
-
     </LinearLayout>
-
-
 </LinearLayout>
