anadir capa y otros

--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -1,29 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/capa1"
-          android:visible="false"
-          android:title="Manzana"
-          android:iconTint="@color/colorAccent"
-          android:icon="@drawable/ic_view_module_26"/>
+          android:visible="true"
+          android:title="Añadir Manzana"
+          android:icon="@drawable/ic_layers_24black"/>
     <item android:id="@+id/capa2"
-          android:title="Vivienda"
-          android:visible="false"
-          android:icon="@drawable/ic_home_24"/>
-    <item android:id="@+id/capa3"
-          android:title="Asignar Vivienda"
-          android:visible="false"
-          android:icon="@drawable/ic_casino"/>
-    <item android:id="@+id/capa4"
+        android:visible="true"
         android:title="Actualizar Manzana"
-        android:icon="@drawable/ic_action_pin"/>
-    <item android:id="@+id/capa5"
-          android:title="Reporte Manzana"
-          android:icon="@drawable/ic_format_list_bulleted"/>
-    <item android:id="@+id/capa6"
+        android:icon="@drawable/ic_view_quilt_26black"/>
+
+<!--    <item android:id="@+id/capa2"-->
+<!--          android:title="Quitar Manzana"-->
+<!--          android:visible="true"-->
+<!--          android:icon="@drawable/ic_layers_clear_24black"/>-->
+<!--    <item android:id="@+id/capa3"-->
+<!--          android:title="Fraccionar Manzana"-->
+<!--          android:visible="true"-->
+<!--          android:icon="@drawable/ic_view_quilt_26black"/>-->
+<!--    <item android:id="@+id/capa4"-->
+<!--        android:title="Fusionar Manzana"-->
+<!--        android:visible="true"-->
+<!--        android:icon="@drawable/ic_border_outer_24black"/>-->
+<!--    <item android:id="@+id/capa5"-->
+<!--          android:title="Replantear Manzana"-->
+<!--        android:visible="true"-->
+<!--          android:icon="@drawable/ic_picture_in_picture_24black"/>-->
+<!--    <item android:id="@+id/capa6"-->
+<!--        android:title="Eliminar Manzana"-->
+<!--        android:icon="@drawable/ic_border_clear_24black"/>-->
+    <item android:id="@+id/capa3"
+        android:title="Reportes"
+        android:icon="@drawable/ic_format_list_bulleted"/>
+    <item android:id="@+id/capa4"
           android:title="Cargar Marco"
-        android:iconTint="@color/colorBlack"
-          android:icon="@drawable/ic_action_map"/>
-    <item android:id="@+id/capa7"
+          android:icon="@drawable/ic_cloud_download_24black"/>
+    <item android:id="@+id/capa5"
         android:title="Reset BD"
         android:icon="@drawable/ic_action_turn_right"/>
 </menu>
