--- a/app/src/main/res/layout/fragment_reporte.xml
+++ b/app/src/main/res/layout/fragment_reporte.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.ReporteFragment">
@@ -19,4 +20,13 @@
             android:layout_margin="20dp">
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab1"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="15dp"
+        android:tint="#ffffff"
+        app:srcCompat="@drawable/ic_backup_48_white"/>
 </FrameLayout>
