--- a/app/src/main/res/layout/item_row_reporte.xml
+++ b/app/src/main/res/layout/item_row_reporte.xml
@@ -59,18 +59,17 @@
                     android:text="estado"
                     android:textAlignment="center"
                     android:padding="5dp"/>
-                <TextView
-                    android:background="@color/colorWhite"
-                    android:id="@+id/txt_item_rp_frentes"
-                    android:layout_weight="2"
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/check_item_rp_estado"
+                    android:clickable="true"
                     android:layout_width="0dp"
+                    android:layout_weight="2"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="14dp"
-                    android:text="frentes"
-                    android:textAlignment="center"
-                    android:padding="5dp"/>
+                    android:padding="5dp"
+                    android:tint="@color/colorRojo"
+                    android:rotation="45"
+                    android:src="@drawable/ic_add_circle_36_white"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
