--- a/app/src/main/res/layout/layout_form_accion.xml
+++ b/app/src/main/res/layout/layout_form_accion.xml
@@ -13,11 +13,93 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/id_spnAccionNombre"
+                <LinearLayout
+                    android:id="@+id/id_accion_ly_mensaje"
+                    android:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"/>
+                    android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:padding="10dp"
+                            android:gravity="center">
+                                <TextView
+                                    android:id="@+id/id_accion_txt_mensaje"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:textColor="@color/colorGrisFuerte"
+                                    android:textAlignment="center"
+                                    android:textSize="18dp"
+                                    android:text="Seleccione la acción a realizar en la manzana"
+                                    android:padding="5dp"/>
+                        </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/id_accion_ly_accion"
+                    android:visibility="visible"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                        <androidx.appcompat.widget.AppCompatSpinner
+                            android:id="@+id/id_accion_sp_accion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="20dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/id_accion_ly_numero"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="5dp"
+                            android:orientation="horizontal"
+                            android:gravity="center">
+                                <LinearLayout
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:layout_gravity="center">
+                                        <androidx.appcompat.widget.AppCompatImageView
+                                            android:tint="@color/colorAccent"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            app:tint="@color/colorVerde"
+                                            android:src="@drawable/ic_action_puzzle_18_black"/>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="2"
+                                    android:layout_gravity="center">
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:textColor="@color/colorGrisFuerte"
+                                            android:textAlignment="center"
+                                            android:textSize="18dp"
+                                            android:text="N° Partes : "/>
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="3"
+                                    android:layout_gravity="center">
+                                        <EditText
+                                            android:id="@+id/id_accion_edt_numero"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:textColor="@color/colorBlack"
+                                            android:textAlignment="center"
+                                            android:textSize="18dp"
+                                            android:text="0"/>
+                                </LinearLayout>
+                        </LinearLayout>
+                </LinearLayout>
         </LinearLayout>
         </ScrollView>
 
