--- a/app/src/main/res/layout/layout_form_accion.xml
+++ b/app/src/main/res/layout/layout_form_accion.xml
@@ -87,10 +87,10 @@
                                 <LinearLayout
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="3"
+                                    android:layout_weight="2"
                                     android:layout_gravity="center">
-                                        <EditText
-                                            android:id="@+id/id_accion_edt_numero"
+                                        <Spinner
+                                            android:id="@+id/id_accion_sp_numero"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:textColor="@color/colorBlack"
