--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -13,15 +13,14 @@
         android:icon="@drawable/ic_loop_24_black"/>
     <item android:id="@+id/capa4"
           android:title="Cargar Marco"
-          android:visible="false"
+          android:visible="true"
           android:icon="@drawable/ic_cloud_download_24black"/>
     <item android:id="@+id/capa5"
         android:title="Reset BD"
-        android:visible="false"
+        android:visible="true"
         android:icon="@drawable/ic_delete_forever_24"/>
     <item android:id="@+id/capa6"
         android:title="Salir"
-
         android:iconTint="@color/colorBlack"
         android:icon="@drawable/ic_action_cancel"/>
 </menu>
