--- a/app/src/main/res/layout/fragment_reporte.xml
+++ b/app/src/main/res/layout/fragment_reporte.xml
@@ -16,7 +16,10 @@
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp">
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
