--- a/app/src/main/res/layout/layout_mapa_principal.xml
+++ b/app/src/main/res/layout/layout_mapa_principal.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.inei.appcartoinei.fragments.MapActualizarManzanaFragment">
     <!-- TODO: Update blank fragment layout -->
     <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
