--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -13,11 +13,11 @@
         android:icon="@drawable/ic_loop_24_black"/>
     <item android:id="@+id/capa4"
           android:title="Cargar Marco"
-          android:visible="true"
+          android:visible="false"
           android:icon="@drawable/ic_cloud_download_24black"/>
     <item android:id="@+id/capa5"
         android:title="Reset BD"
-        android:visible="true"
+        android:visible="false"
         android:icon="@drawable/ic_delete_forever_24"/>
     <item android:id="@+id/capa6"
         android:title="Salir"
